Tela de login *Criando a tela de login  do APP Green , *Modificações no layout original . *reduzindo trecho de codigo . *criando widgets. *finalizando a tela de login.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - Images/login_Images/logo.png
-  - Images/login_Images/login2.png
+    - assets/logo.png
+    -  assets/login2.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
