--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: '>=2.18.0 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,6 +36,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  material_design_icons_flutter: ^5.0.6996
+  get: ^4.6.5
+  ionicons: ^0.2.1
+  eva_icons_flutter: ^3.1.0
+  intl: ^0.17.0
+  iconsax: ^0.0.8
+  flutter_slidable: ^2.0.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -59,11 +67,31 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
     -  assets/login2.png
 
+    -  assets/contas.png
+    -  assets/avatar.png
+    -  assets/metas.png
+    -  assets/pagamentos.png
+    -  assets/mcdonalds.png
+    -  assets/gas-station.png
+    -  assets/combustivel.png
+    - assets/comida.png
+    - assets/comidas2.png
+    - assets/academia.png
+    - assets/academia2.png
+    - assets/hospital.png
+    - assets/mercado.png
+    - assets/metas2.png
+    - assets/metas3.png
+    - assets/petshop.png
+    - assets/profile.png
+    - assets/transporte.png
+    - assets/viagem.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -76,17 +104,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+
+  fonts:
+    - family: Khang
+      fonts:
+        - asset: assets/fonts/Khang-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Khang-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Khang-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Khang-Semibold.ttf
+          weight: 600
+        - asset: assets/fonts/Khang-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/MyFlutterApp.ttf
+          weight: 700
+
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
