--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.0.15
   email_validator: ^2.1.17
   pie_chart: ^5.3.2
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
