--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   bottom_navigation_bar: ^1.0.1
   antdesign_icons: ^0.0.3
   fl_chart: ^0.55.2
+  flutter_sparkline: ^0.1.0
 
 
 dev_dependencies:
