--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -122,6 +122,16 @@ flutter:
     - assets/charity.png
     - assets/eating.png
     - assets/gift.png
+    - assets/screenboard.png
+    - assets/screenboard2.png
+    - assets/screenboard3.png
+    - assets/screenboard4.png
+    - assets/screenboard5.png
+    - assets/screenboard6.png
+    - assets/screenboard7.png
+    - assets/teste1.png
+    - assets/teste2.png
+    - assets/arrow.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
