--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -132,6 +132,8 @@ flutter:
     - assets/teste1.png
     - assets/teste2.png
     - assets/arrow.png
+    - assets/screen01.png
+    - assets/screen02.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
