--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,28 +39,34 @@ dependencies:
   material_design_icons_flutter: ^5.0.6996
   get: ^4.6.5
   ionicons: ^0.2.1
-  intl: ^0.17.0
+  intl: ^0.16.0
   iconsax: ^0.0.8
   flutter_slidable: ^2.0.0
   shared_preferences: ^2.0.15
   email_validator: ^2.1.17
-  pie_chart: ^5.3.2
   provider: ^6.0.4
-  syncfusion_flutter_charts: ^20.3.52
+  line_icons: ^2.0.1
   hive: ^2.2.3
   chart_components: ^1.0.1
-  carbon_icons: ^0.0.1+2
   flutter_rating_bar: ^4.0.1
   hive_flutter: ^1.1.0
   page_transition: ^1.1.7+6
-  flutter_charts: ^0.5.0
+
   percent_indicator: ^4.2.2
-  json_dynamic_widget_plugin_ionicons: ^3.0.0+22
+  flutter_svg: ^1.1.2
+  google_fonts: ^3.0.1
+  quiver: ^3.1.0
+  basics: ^0.9.0
   animated_bottom_navigation_bar: ^0.2.1
   bottom_navigation_bar: ^1.0.1
   antdesign_icons: ^0.0.3
-  fl_chart: ^0.55.2
   flutter_sparkline: ^0.1.0
+  animated_splash_screen: ^1.0.1+2
+  lottie: ^2.0.0
+  bezier_chart: ^1.0.16
+  slide_to_confirm: ^1.1.0
+
+  sqflite: ^2.2.0+3
 
 
 dev_dependencies:
@@ -72,7 +78,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -116,7 +123,6 @@ flutter:
     - assets/food.png
     - assets/starbucks.ico
     - assets/star.png
-    - assets/auto.png
     - assets/bank.png
     - assets/cash.png
     - assets/charity.png
@@ -134,6 +140,10 @@ flutter:
     - assets/arrow.png
     - assets/screen01.png
     - assets/screen02.png
+    - assets/GreenSplash.json
+    - assets/greenSleep.json
+    - assets/combustivel.png
+    - assets/auto.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
