--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,27 +47,21 @@ dependencies:
   provider: ^6.0.4
   line_icons: ^2.0.1
   hive: ^2.2.3
-  chart_components: ^1.0.1
-  flutter_rating_bar: ^4.0.1
   hive_flutter: ^1.1.0
   page_transition: ^1.1.7+6
-
+  path_provider: ^2.0.11
   percent_indicator: ^4.2.2
-  flutter_svg: ^1.1.2
   google_fonts: ^3.0.1
   quiver: ^3.1.0
   basics: ^0.9.0
   animated_bottom_navigation_bar: ^0.2.1
   bottom_navigation_bar: ^1.0.1
-  antdesign_icons: ^0.0.3
-  flutter_sparkline: ^0.1.0
   animated_splash_screen: ^1.0.1+2
   lottie: ^2.0.0
-  bezier_chart: ^1.0.16
-  slide_to_confirm: ^1.1.0
-
   sqflite: ^2.2.0+3
-
+  fl_chart:
+  font_awesome: ^5.10.1
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
