adicionando novos idiomas

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   material_design_icons_flutter: ^5.0.6996
   get: ^4.6.5
   ionicons: ^0.2.1
-  intl: ^0.16.0
+  intl: ^0.17.0
   iconsax: ^0.0.8
   flutter_slidable: ^2.0.0
   shared_preferences: ^2.0.15
@@ -62,6 +62,8 @@ dependencies:
   fl_chart:
   font_awesome: ^5.10.1
   flutter_svg: ^1.0.3
+  localization: ^2.1.0
+  flutter_localization: ^0.1.9
 
 dev_dependencies:
   flutter_test:
@@ -138,6 +140,7 @@ flutter:
     - assets/greenSleep.json
     - assets/combustivel.png
     - assets/auto.png
+    - lib/i18n/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
