--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   syncfusion_flutter_gauges:
   currency_formatter:
   uuid:
+  firebase_core:
+  firebase_auth:
   currency_text_input_formatter: ^2.1.7
 dev_dependencies:
   flutter_test:
