--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -150,6 +150,27 @@ flutter:
     - assets/sub11.png
     - assets/sub12.png
     - assets/sub13.png
+    - assets/sub14.png
+    - assets/sub15.png
+    - assets/sub16.png
+    - assets/sub17.png
+    - assets/sub18.png
+    - assets/sub19.png
+    - assets/sub20.png
+    - assets/sub21.png
+    - assets/sub22.png
+    - assets/sub23.png
+    - assets/sub24.png
+    - assets/sub25.png
+    - assets/sub26.png
+    - assets/sub27.png
+    - assets/sub28.png
+    - assets/sub29.png
+    - assets/sub30.png
+    - assets/sub31.png
+    - assets/sub32.png
+    - assets/sub33.png
+    - assets/sub34.png
     - lib/i18n/
     - trabalhando.png
 
