--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -121,7 +121,7 @@ flutter:
     - assets/manutencao.png
     - assets/pet-shop.png
     - assets/google.png
-    - assets/drinks.png
+    - assets/drink.png
     - assets/fast-food.png
     - assets/gas-pump.png
     - assets/gifts.png
