--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -158,6 +158,14 @@ flutter:
     - assets/sub34.png
     - lib/i18n/
     - trabalhando.png
+    - assets/carro.png
+    - assets/sub123.png
+    - assets/sub200.png
+    - assets/car.png
+    - assets/hamburger.png
+    - assets/sub340.png
+    - assets/playstore.png
+    - assets/mental.png
 
 
 
