--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:555764640181:ios:83cee40a279283b1cc91fc",
-  "FIREBASE_PROJECT_ID": "green-a3d97",
-  "GCM_SENDER_ID": "555764640181"
+  "GOOGLE_APP_ID": "1:788602332941:ios:a2c4c1ac9c4c3ba40e7244",
+  "FIREBASE_PROJECT_ID": "green-finance-6b4ef",
+  "GCM_SENDER_ID": "788602332941"
 }
