--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,16 +39,27 @@ dependencies:
   flutter_localization: ^0.1.9
   currency_formatter:
   uuid:
-  firebase_core:
-  firebase_auth:
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.5
   currency_text_input_formatter: ^2.1.7
   font_awesome_flutter: ^10.3.0
   liquid_progress_indicator: ^0.4.0
+  get_it: ^7.2.0
+  mobx: ^2.1.3
+  flutter_mobx: ^2.0.6+5
+  asuka: ^2.0.1+3
+  validatorless: ^1.2.3
   cloud_firestore: ^4.3.1
+  logger: ^1.1.0
+  
 dev_dependencies:
   flutter_test:
 
     sdk: flutter
+  mobx_codegen: ^2.1.1
+
+  build_runner: ^2.3.2
+
 
 
 flutter:
