--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  easy_loader: ^2.0.0
   material_design_icons_flutter: ^5.0.6996
   get: ^4.6.5
   ionicons: ^0.2.1
@@ -71,6 +72,8 @@ flutter:
 
   assets:
     - assets/logo.png
+    - assets/piggy.gif
+    - assets/01.gif
     - assets/login2.png
     - assets/pigSleeping.png
     - assets/contas.png
