Adicionando  extrato  da aplicação .

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,10 @@ dependencies:
   validatorless: ^1.2.3
   cloud_firestore: ^4.3.1
   logger: ^1.1.0
-  
+  simple_month_year_picker: ^0.0.2
+
+  local_auth: ^2.1.3
+
 dev_dependencies:
   flutter_test:
 
