--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   cloud_firestore: ^4.3.1
   logger: ^1.1.0
   simple_month_year_picker: ^0.0.2
-
+  charts_flutter_new: ^0.12.0
 
 
 dev_dependencies:
